Fix the header for drawer in IE
The header was not showing.
Also there were some issues with weird scrollbars

--- a/src/shared/components/drawer/drawer.css
+++ b/src/shared/components/drawer/drawer.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: flex-start;
   z-index: var(--z-index--modal);
-  overflow-y: scroll;
+  overflow-y: auto;
 
   @media (--medium) {
     align-items: flex-start;
@@ -83,10 +83,11 @@
     align-items: center;
     background: var(--hw-color-white);
     width: 100%;
+    max-width: calc(33vw - 36px);
     height: 60px;
     padding-left: var(--hw-spacing-smaller);
     padding-right: var(--hw-spacing);
-
+    z-index: var(--z-index--modal-foreground);
     @media (--large) {
       padding-left: var(--hw-spacing-small);
       padding-right: var(--hw-spacing-large);
